@@ -21,6 +21,10 @@
 		<jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
 		<spotify-web-api-java.version>2.1.2</spotify-web-api-java.version>
 		<java-faker.version>0.15</java-faker.version>
+		<jaxb-api-version>2.3.1</jaxb-api-version>
+		<coveralls-maven-plugin-version>4.3.0</coveralls-maven-plugin-version>
+		<maven-release-plugin-version>2.5.3</maven-release-plugin-version>
+		<jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -92,6 +96,77 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>${coveralls-maven-plugin-version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>javax.xml.bind</groupId>
+						<artifactId>jaxb-api</artifactId>
+						<version>${jaxb-api-version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>${jacoco-maven-plugin.version}</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+					<configuration>
+						<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+					</configuration>
+				</execution>
+				<execution>
+					<id>jacoco-check</id>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					<configuration>
+						<rules>
+							<rule>
+								<element>PACKAGE</element>
+								<limits>
+									<limit>
+										<counter>LINE</counter>
+										<value>COVEREDRATIO</value>
+										<minimum>0.0</minimum>
+									</limit>
+								</limits>
+							</rule>
+						</rules>
+					</configuration>
+				</execution>
+				<execution>
+					<id>report</id>
+					<phase>prepare-package</phase>
+					<goals>
+						<goal>report</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-release-plugin</artifactId>
+			<version>${maven-release-plugin-version}</version>
+			<configuration>
+				<tagNameFormat>v@{project.version}</tagNameFormat>
+				<updateWorkingCopyVersions>false</updateWorkingCopyVersions>
+				<pushChanges>false</pushChanges>
+			</configuration>
+		</plugin>
 		</plugins>
 	</build>
 
